# freerdp-harmonyos

./: .gitignore  HOW_TO_SIGN_AND_BUILD.txt  README.md  README_签名完成.txt  REBUILD_NATIVE_OHOS.md  SIGNING_QUICK_START.md  START_HERE.md  agconnect-services.json  build-and-sign.ps1  build-profile.json5  build-profile.json5.backup  build-release.ps1  build.ps1  check-hap.ps1  generate-debug-signature.ps1  generate-release-csr.ps1  setup-signing.ps1  test-password.ps1  verify-signing.ps1  复制完整签名配置.md  如何构建应用.md  完整签名配置步骤.md  最终解决方案.md  签名配置完成_下一步.txt  签名配置指南.md  获取本地签名配置.md  获取签名文件详细步骤.md  解决签名密码问题.md  配置签名步骤.txt
.github/workflows/: build-and-sign.yml  build-freerdp-harmonyos.yml
.hvigor/cache/: file-cache.json  task-cache.json
.hvigor/dependencyMap/: dependencyMap.json5  oh-package.json5
.hvigor/outputs/build-logs/: build.log.1  build.log.3
.hvigor/outputs/logs/details/: details.json
.hvigor/outputs/sync/: fileCache.json  output.json
.hvigor/report/: report-202601140029122250.json  report-202601140033153040.json  report-202601140034587300.json  report-202601160920057650.json  report-202601160943573350.json  report-202601160944164860.json  report-202601160946470050.json  report-202601160955323060.json  report-202601161100363520.json  report-202601161100456640.json  report-202601161101182800.json  report-202601161126425030.json  report-202601161216534070.json  report-202601181700285630.json  report-202601181705329790.json  report-202601181708594420.json  report-202601181710369280.json  report-202601181711537990.json  report-202601181712084600.json  report-202601181718175690.json  report-202601181723520790.json  report-202601181724003310.json  report-202601181732081580.json  report-202601181833453950.json  report-202601181834228000.json  report-202601181848090740.json  report-202601181848190360.json  report-202601181908423270.json  report-202601181908552060.json  report-202601181926014010.json  report-202601181926149960.json
.signing/: README.md  debug.csr  如何获取签名文件.txt
AppScope/: app.json5
android/Studio/: AUTO_RESTART_FIXES.md  BACKGROUND_COLOR_OPTIMIZATION.md  BACKGROUND_COLOR_QUICK_REF.md  BACKGROUND_GAP_CHECK_FIX.md  BUG_ANALYSIS.md  BUG_ANALYSIS_SUMMARY.md  BUG_FIXES_2026_01_04.md  BUG_FIXES_COMPREHENSIVE_2025.md  BUG_FIXES_SUMMARY.md  BUG_FIX_SUMMARY.md  BUILD_STATUS.md  COMPILATION_FIX.md  CROSS_LINE_FIX_2026_01_04.md  DASHED_LINE_COLOR_FILTER.md  DASHED_LINE_DETECTION_FINAL.md  DASHED_LINE_DETECTION_IMPROVEMENTS_2026.md  DASHED_LINE_DETECTION_ON_RELEASE.md  DASHED_LINE_DETECTION_SIMPLIFIED.md  DASHED_LINE_FIXES.md  DASHED_LINE_SNAP_FEATURE.md  DEBUG_HYPOTHESES.md  DEBUG_REPRODUCTION_STEPS.md  DEPLOYMENT_SUMMARY.md  DETAILED_BUG_ANALYSIS.md  DETECTION_LOGIC_FIX_2026.md  DETECTION_RANGE_OPTIMIZATION.md  DUAL_KEEPALIVE_CONFIG.md  GITHUB_BUILD_GUIDE.md  HEARTBEAT_OPTIMIZATION.md  IMPLEMENTATION_COMPLETE_REPORT.md  IMPLEMENTATION_SUMMARY_20251218.md  KEEPALIVE_CONFIG.md  LONG_SEGMENT_CHECK_FIX.md  MOUSE_DRAG_BUG_FIXES.md  PERIOD_BOUNDARY_DETECTION.md  POINTER_FIX.md  QUICK_FIX_REFERENCE.md  QUICK_TEST_GUIDE.md  RECONNECT_BUG_FIX_COMPLETE.md  RECONNECT_CALLBACK_CONFLICT_FIX.md  (+57 more)
android/Studio/2x_analysis/extracted/: AndroidManifest.xml  build.xml  classes.dex  resources.arsc
android/Studio/2x_analysis/extracted/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
android/Studio/2x_analysis/extracted/res/anim/: slide_from_bottom.xml  slide_to_bottom.xml
android/Studio/2x_analysis/extracted/res/drawable/: button_selector_dark.xml  button_selector_transparent.xml  card_background.xml  card_background_pressed.xml  card_selector.xml  fragment_detail_bg.xml  ic_status_api8.xml  key_selector.xml  (+3 more)
android/Studio/2x_analysis/extracted/res/drawable-v11/: list_selector.xml
android/Studio/aFreeRDP/: build.gradle
android/Studio/aFreeRDP/src/main/: AndroidManifest.xml
android/Studio/freeRDPCore/: build.gradle  build.gradle.backup_before_openssl_fix
android/Studio/freeRDPCore/src/main/: AndroidManifest.xml  AndroidManifest.xml.backup_20251215_233154
android/Studio/freeRDPCore/src/main/cpp/: CMakeLists.txt  android_event.c  android_event.h  android_freerdp.c  android_freerdp.c.backup_before_cleanup_20251126  android_freerdp.c.backup_before_cursor_impl  android_jni_callback.c  android_jni_callback.h  dummy_android.c
entry/: build-profile.json5
entry/libs/arm64-v8a/: README.txt  libavcodec.so.60.31.102  libavdevice.so.60  libavfilter.so.9  libavformat.so.60  libcrypto.so.3  libfreerdp-client3.so.3  libfreerdp3.so.3  libssl.so.3  libswscale.so.7  libwinpr-tools3.so.3.10.3  libwinpr3.so.3  libz.so.1
entry/libs/include/freerdp3/config/: config.h
entry/libs/include/freerdp3/freerdp/: build-config.h  settings_keys.h  version.h
entry/libs/include/winpr3/config/: config.h  version.h
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  freerdp_client_compat.c  freerdp_client_compat.h  harmonyos_cliprdr.c  harmonyos_event.c  harmonyos_freerdp.cpp  harmonyos_freerdp.h  harmonyos_jni_callback.c  harmonyos_jni_utils.c  harmonyos_napi.cpp
entry/src/main/ets/components/: SessionView.ets  TouchPointerView.ets  VirtualKeyboard.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/model/: BookmarkBase.ets  SessionState.ets
entry/src/main/ets/pages/: AboutPage.ets  BookmarkPage.ets  Index.ets  SessionPage.ets  SettingsPage.ets
entry/src/main/ets/services/: AudioFocusManager.ets  LibFreeRDP.ets  NetworkManager.ets  RdpBackgroundService.ets  RdpSessionManager.ets
entry/src/main/ets/utils/: ClipboardManager.ets  KeyboardMapper.ets
scripts/: download-libs.ps1  rebuild-ohos-deps.ps1  rebuild-ohos-native.ps1
tmp-hap/unzipped/: .pages.info  module.json  pack.info  pkgContextInfo.json  resources.index
tmp-hap/unzipped/ets/: modules.abc
tmp-hap/unzipped/libs/arm64-v8a/: libavcodec.so.60.31.102  libavdevice.so.60  libavfilter.so.9.12.100  libavformat.so.60.16.100  libcjson.so.1.7.18  libcrypto.so.3  libswscale.so.7  libz.so.1
tmp-hap/unzipped/resources/base/profile/: main.json  main_pages.json
(+254 files in other folders)
